Update new (version 2601) (#5)
## What's new?

- Remove Windows 10 Enterprise G as the primary KMS host, instead move to Windows Server 2025 (https://github.com/tfslabs/license-manager/commit/314cf248bda7b95de69e40d15f0c8a9531f2c3aa)
- Add new Visual Studio 2026 `pkeyconfig` and product keys (https://github.com/tfslabs/license-manager/commit/089f4ba68134448eb5a955017a523b0a19406b92)
- Added Visual Studio 2015 and 2017 product keys (https://github.com/tfslabs/license-manager/commit/1881e396a2369dc8786db36f438a7ee739f9b0a0)
- Clarification in KMS activation error & KMS external library import (https://github.com/tfslabs/license-manager/commit/ea86fba654fc1f30c4ac32f2131188361f1aeac5)
- Fix for [display overflow (reported by Carlos Detweiller)](https://forums.mydigitallife.net/threads/emulated-kms-servers-on-non-windows-platforms.50234/page-112#post-1887837) (https://github.com/tfslabs/license-manager/commit/979c88ff122098b0ab9f48d11b64e4401a7f7251)

## Release date

Only all issues between the developers and engineers have been resolved satisfactorily.

---------

Co-authored-by: Vo Luu Tuong Anh <anhvlt.2006@outlook.com>
Co-authored-by: VLTA of @TheFlightSims <176574466+anhvlt-2k6@users.noreply.github.com>

--- a/License Manager.csproj
+++ b/License Manager.csproj
@@ -425,6 +425,7 @@
     <Resource Include="Data\PKeyConfig\pkconfig-vs2017.xrm-ms.gz" />
     <Resource Include="Data\PKeyConfig\pkconfig-vs2019.xrm-ms.gz" />
     <Resource Include="Data\PKeyConfig\pkconfig-vs2022.xrm-ms.gz" />
+    <Resource Include="Data\PKeyConfig\pkconfig-vs2026.xrm-ms.gz" />
     <Resource Include="Data\PKeyConfig\16299-pkeyconfig-csvlk.xrm-ms.gz" />
     <Resource Include="Data\PKeyConfig\16299-pkeyconfig.xrm-ms.gz" />
     <Resource Include="Data\PKeyConfig\18362-pkeyconfig.xrm-ms.gz" />
